# Fusion2020-Robot

./: SKN_Fusion_arduino_code_encoder.ino  UDP_server.py  kontury.py  ramki.ino
fusion2020/: package.xml  setup.cfg  setup.py
fusion2020/fusion2020/: auto_driving.py  auto_logs.db  client_udp.py  communication.py  data_base_creator.py  flask_serw.py  manual.py  teleop_twist_keyboard.py
fusion2020/fusion2020/templates/: index.html
