<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion2020</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
	  <build_type>ament_python</build_type>
	  <exec_depend>cv2</exec_depend>
	  <exec_depend>numpy</exec_depend>
	  <exec_depend>geometry_msgs</exec_depend>
	  <exec_depend>rclpy</exec_depend>
	  <exec_depend>socket</exec_depend>
	  <exec_depend>struct</exec_depend>
	  <exec_depend>math</exec_depend>
	  <exec_depend>serial</exec_depend>
	  <exec_depend>std_msgs</exec_depend>
  </export>
</package>
